kubernetes/apps/home/tools/fdroid/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fdroid
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: F-Droid
    gethomepage.dev/description: Android App Repository
    gethomepage.dev/group: Development
    gethomepage.dev/icon: https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/png/fdroid.png
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - "fdroid.${DOMAIN1}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fdroid
          port: 8080
