kubernetes/apps/home/tools/fdroid/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: fdroid
spec:
  description: "Network policy for F-Droid static repository server"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: fdroid
  ingress:
    # Allow same namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
    # Allow ingress from envoy-gateway
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
    # Allow Tekton pipeline pods
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tekton-pipelines
  egress:
    # Allow same namespace traffic
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
    # Allow access to MinIO storage
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: storage
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
